Implement a basic countdown

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,5 @@
 <div>{{timer}}</div>
+<button type="button" {{action 'start'}}>Start</button>
+<button type="button" {{action 'stop'}}>Stop</button>
 
 {{outlet}}
