--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,4 +6,13 @@
   <button type="button" {{action 'start'}}>Start</button>
 {{/if}}
 
+<h2>People</h2>
+<ul>
+{{#each model}}
+  <li>{{name}}</li>
+{{/each}}
+</ul>
+{{input type="text" value=name placeholder="Name"}}
+<button type="button" {{action "add"}}>Add</button>
+
 {{outlet}}
