Simplify the driver switching logic

--- a/app/templates/people.hbs
+++ b/app/templates/people.hbs
@@ -2,7 +2,7 @@
 
 <ul>
 {{#each}}
-  <li>{{#if currentDriver}}* {{/if}}{{name}}</li>
+  <li>{{#if isDriver}}* {{/if}}{{name}}</li>
 {{/each}}
 </ul>
 
