Always display the timer

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,6 @@
+<div class="timer">{{timer}}</div>
+
 {{#if running}}
-  <div>{{timer}}</div>
   <button type="button" {{action "stop"}}>Stop</button>
 {{else}}
   {{input type="text" value=minutes placeholder="Minutes"}}
