--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,29 @@
-html, body {
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+h1, h2 {
+  font-weight: normal;
+}
+
+.timer {
+  font-size: 72px;
+  text-align: center;
   margin: 20px;
+}
+
+ul.people {
+  list-style: none;
+  margin: 20px 0;
+  padding: 0;
+
+  li {
+    padding: 5px;
+    background: #f9f9f9;
+
+    &.driver {
+      background: #eee;
+    }
+  }
 }
