Add Pure CSS for some basic style and responsivity

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,18 @@ h1, h2 {
   font-weight: normal;
 }
 
+form {
+  margin: 20px 0;
+}
+
+.button-small {
+  font-size: 75%;
+}
+
+input {
+  margin: 0 auto;
+}
+
 .timer {
   font-size: 72px;
   text-align: center;
