--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,8 @@
-<h1>mob timer</h1>
-{{outlet}}
+<div class="pure-g">
+  <div class="pure-u-1 pure-u-md-1-3"></div>
+  <div class="pure-u-1 pure-u-md-1-3">
+    <h1>mob timer</h1>
+    {{outlet}}
+  </div>
+  <div class="pure-u-1 pure-u-md-1-3"></div>
+</div>
