--- a/app/templates/people.hbs
+++ b/app/templates/people.hbs
@@ -6,9 +6,9 @@
 {{/each}}
 </ul>
 
-<button type="button" {{action "shuffle"}}>Shuffle</button>
+<button type="button" class="pure-button button-small" {{action "shuffle"}}>Shuffle</button>
 
-<form {{action "addPerson" on="submit"}}>
+<form class="pure-form" {{action "addPerson" on="submit"}}>
   {{input type="text" value=name placeholder="Name"}}
-  {{input type="submit" value="Add"}}
+  {{input type="submit" value="Add" class="pure-button"}}
 </form>
