--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,12 @@
+html {
+  min-height: 100%;
+  position: relative;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  height: 100%;
 }
 
 h1, h2 {
