--- a/app/templates/people.hbs
+++ b/app/templates/people.hbs
@@ -9,7 +9,7 @@
 {{/each}}
 </ul>
 
-<button type="button" class="pure-button button-small" {{action "shuffle"}}>Shuffle</button>
+<button type="button" class="pure-button button-small" {{action "shuffle"}} {{bind-attr disabled="controllers.index.running"}}>Shuffle</button>
 
 <form class="pure-form" {{action "addPerson" on="submit"}}>
   {{input type="text" value=name placeholder="Name"}}
