Add a link to the repository

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,3 +15,5 @@
 </form>
 
 {{outlet "people"}}
+
+<a href="https://github.com/zoeesilcock/mob-timer" target="blank" class="github"><img src="github_mark.png">github</a>
