--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -80,3 +80,16 @@ ul.people {
     }
   }
 }
+
+.github {
+  color: #000;
+  font-size: 12px;
+  float: right;
+  padding: 10px;
+
+  img {
+    width: 16px;
+    vertical-align: middle;
+    padding-right: 5px;
+  }
+}
