--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,12 +25,16 @@ form {
   margin: 20px 0;
 }
 
-.button-small {
-  font-size: 75%;
+.ember-text-field {
+  float: right;
 }
 
-input {
-  margin: 0 auto;
+.pure-button {
+  line-height: 19px;
+}
+
+.button-small {
+  font-size: 75%;
 }
 
 .overlay {
@@ -46,7 +50,7 @@ input {
 .timer {
   font-size: 72px;
   text-align: center;
-  margin: 20px;
+  margin: 30px 0 20px 0;
 }
 
 ul.people {
@@ -56,6 +60,7 @@ ul.people {
 
   li {
     padding: 5px;
+    margin: 0 20px;
     background: #f9f9f9;
     position: relative;
 
