--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,16 +2,23 @@
 <div class="timer">{{timer}}</div>
 
 <form class="pure-form" {{action "start" on="submit"}}>
-  {{input type="number" value=minutes placeholder="Minutes" class="pure-input-1-4"}}
-  {{#if running}}
-    <button type="button" class="pure-button" {{action "pause"}}>Pause</button>
-  {{else}}
-    {{input type="submit" value="Start" class="pure-button"}}
+  <div class="pure-g">
+    <div {{bind-attr class="paused::pure-u-1-8"}}></div>
+    <div class="pure-u-1-2">
+      {{input type="number" value=minutes placeholder="Minutes" class="pure-u-5-6"}}
+    </div>
+    <div class="pure-u-2-6">
+      {{#if running}}
+        <button type="button" class="pure-button" {{action "pause"}}>Pause</button>
+      {{else}}
+        {{input type="submit" value="Start" class="pure-button"}}
 
-    {{#if paused}}
-      <button type="button" class="pure-button" {{action "reset"}}>Reset</button>
-    {{/if}}
-  {{/if}}
+        {{#if paused}}
+          <button type="button" class="pure-button" {{action "reset"}}>Reset</button>
+        {{/if}}
+      {{/if}}
+    </div>
+  </div>
 </form>
 
 {{outlet "people"}}
