--- a/app/templates/people.hbs
+++ b/app/templates/people.hbs
@@ -12,6 +12,13 @@
 <button type="button" class="pure-button button-small" {{action "shuffle"}} {{bind-attr disabled="controllers.index.running"}}>Shuffle</button>
 
 <form class="pure-form" {{action "addPerson" on="submit"}}>
-  {{input type="text" value=name placeholder="Name"}}
-  {{input type="submit" value="Add" class="pure-button"}}
+  <div class="pure-g">
+    <div class="pure-u-1-8"></div>
+    <div class="pure-u-1-2">
+      {{input type="text" value=name placeholder="Name" class="pure-u-5-6"}}
+    </div>
+    <div class="pure-u-2-6">
+      {{input type="submit" value="Add" class="pure-button"}}
+    </div>
+  </div>
 </form>
