--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   height: 100%;
+  max-width: 480px;
+  margin: 0 auto;
 }
 
 h1, h2 {
