--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -39,6 +39,13 @@ form {
   font-size: 75%;
 }
 
+.pure-g {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .overlay {
   z-index: 9001;
   position: absolute;
