--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,7 +5,7 @@
   <div class="pure-g">
     <div {{bind-attr class="paused::pure-u-1-8"}}></div>
     <div class="pure-u-1-2">
-      {{input type="number" value=minutes placeholder="Minutes" class="pure-u-5-6"}}
+      {{input type="number" value=model.minutes placeholder="Minutes" class="pure-u-5-6"}}
     </div>
     <div class="pure-u-2-6">
       {{#if running}}
